style cart section

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@
 @import "tailwindcss";
 
 @theme {
+  --color-red: #c73b0f;
   --color-rose-50: #fcf8f6;
+  --color-rose-500: #87635a;
   --color-rose-900: #260f08;
 }
 
