style cart items

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @theme {
   --color-red: #c73b0f;
   --color-rose-50: #fcf8f6;
+  --color-rose-100: #f5eeec;
   --color-rose-400: #ad8a85;
   --color-rose-500: #87635a;
   --color-rose-900: #260f08;
